Fixes dropdowns on IE8.

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -926,6 +926,9 @@ body.full {
     width: 120px;
 }
 
+.site-nav.nav-collapse,
+.user-nav.nav-collapse { overflow: visible; } /* Fixes dropdowns on IE */
+
 /* Subnav */
 .subnav {
   width: 100%;
